Fixed the white space at the bottom of the page and corrected the height of the page to 100 vh

--- a/src/frontend/App.css
+++ b/src/frontend/App.css
@@ -1,5 +1,5 @@
 .background{
-    height: 100vmax;
+    height: 100vh;
     width: 100vmax;
 }
 
